--- a/Qt/addcarte.ui
+++ b/Qt/addcarte.ui
@@ -42,7 +42,7 @@
         <string>&amp;Etat :</string>
        </property>
        <property name="buddy">
-        <cstring>ledtEtat</cstring>
+        <cstring>cmbStatus</cstring>
        </property>
       </widget>
      </item>
@@ -51,13 +51,13 @@
        <property name="text">
         <string>Ele&amp;ve :</string>
        </property>
+       <property name="buddy">
+        <cstring>pbuChooseEleve</cstring>
+       </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QLineEdit" name="ledtNum"/>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="ledtEtat"/>
      </item>
      <item row="2" column="1">
       <widget class="QPushButton" name="pbuChooseEleve">
@@ -65,6 +65,9 @@
         <string>&amp;Choisir un élève</string>
        </property>
       </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QComboBox" name="cmbStatus"/>
      </item>
     </layout>
    </item>
